[gd_scene load_steps=23 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Mundo/Seleccion_Zona/seleccion_Zona.gd" type="Script" id=2]

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="Theme" id=7]
HScrollBar/styles/scroll = SubResource( 6 )

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.317647, 0.882353, 0.847059, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.760784, 0.945098, 0.270588, 1 )

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.94902, 0.27451, 0.0627451, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.152941, 0.231373, 0.909804, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.423529, 0.0509804, 0.788235, 1 )

[sub_resource type="AnimationNodeAnimation" id=8]
animation = "zona_1"

[sub_resource type="AnimationNodeAnimation" id=9]
animation = "zona_2"

[sub_resource type="AnimationNodeAnimation" id=10]
animation = "zona_3"

[sub_resource type="AnimationNodeAnimation" id=11]
animation = "zona_4"

[sub_resource type="AnimationNodeAnimation" id=12]
animation = "zona_4"

[sub_resource type="AnimationNodeAnimation" id=13]
animation = "zona_5"

[sub_resource type="AnimationNodeAnimation" id=14]
animation = "zona_1"

[sub_resource type="AnimationNodeBlendSpace1D" id=15]
blend_point_0/node = SubResource( 8 )
blend_point_0/pos = 1.0
blend_point_1/node = SubResource( 9 )
blend_point_1/pos = 1.0
blend_point_2/node = SubResource( 10 )
blend_point_2/pos = 2.0
blend_point_3/node = SubResource( 11 )
blend_point_3/pos = 3.0
blend_point_4/node = SubResource( 12 )
blend_point_4/pos = 4.0
blend_point_5/node = SubResource( 13 )
blend_point_5/pos = 5.0
blend_point_6/node = SubResource( 14 )
blend_point_6/pos = 0.0
max_space = 6.0
snap = 1.0

[sub_resource type="Animation" id=16]
resource_name = "zona_1"

[sub_resource type="Animation" id=17]
resource_name = "zona_2"

[sub_resource type="Animation" id=18]
resource_name = "zona_3"

[sub_resource type="Animation" id=19]
resource_name = "zona_4"

[sub_resource type="Animation" id=20]
resource_name = "zona_5"

[node name="seleccion_Zona" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_vertical = 3
theme = SubResource( 7 )
scroll_vertical_enabled = false

[node name="HBoxContainer" type="HBoxContainer" parent="ScrollContainer"]
margin_right = 5120.0
margin_bottom = 600.0
mouse_filter = 2
size_flags_vertical = 3
custom_constants/separation = 0

[node name="Zona_1" type="PanelContainer" parent="ScrollContainer/HBoxContainer"]
margin_right = 1024.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 0 )
rect_pivot_offset = Vector2( -227, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 1 )

[node name="Zona_2" type="PanelContainer" parent="ScrollContainer/HBoxContainer"]
margin_left = 1024.0
margin_right = 2048.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 0 )
rect_pivot_offset = Vector2( -227, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="Zona_3" type="PanelContainer" parent="ScrollContainer/HBoxContainer"]
margin_left = 2048.0
margin_right = 3072.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 0 )
rect_pivot_offset = Vector2( -227, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 3 )

[node name="Zona_4" type="PanelContainer" parent="ScrollContainer/HBoxContainer"]
margin_left = 3072.0
margin_right = 4096.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 0 )
rect_pivot_offset = Vector2( -227, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 4 )

[node name="Zona_5" type="PanelContainer" parent="ScrollContainer/HBoxContainer"]
margin_left = 4096.0
margin_right = 5120.0
margin_bottom = 600.0
rect_min_size = Vector2( 1024, 0 )
rect_pivot_offset = Vector2( -227, 0 )
mouse_filter = 2
custom_styles/panel = SubResource( 5 )

[node name="Atras" type="Button" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_top = -35.0
margin_right = 76.0
margin_bottom = 35.0
icon = ExtResource( 1 )

[node name="Adelante" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -76.0
margin_top = -35.0
margin_bottom = 35.0
icon = ExtResource( 1 )

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource( 15 )
anim_player = NodePath("../AnimationPlayer")
active = true
parameters/blend_position = 3.68497

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/zona_1 = SubResource( 16 )
anims/zona_2 = SubResource( 17 )
anims/zona_3 = SubResource( 18 )
anims/zona_4 = SubResource( 19 )
anims/zona_5 = SubResource( 20 )

[connection signal="scroll_ended" from="ScrollContainer" to="." method="_on_ScrollContainer_scroll_ended"]
[connection signal="scroll_started" from="ScrollContainer" to="." method="_on_ScrollContainer_scroll_started"]
[connection signal="pressed" from="Atras" to="." method="_on_Atras_pressed"]
[connection signal="pressed" from="Adelante" to="." method="_on_Adelante_pressed"]
